Rename some of the classes and variables

--- a/src/classes/ArtistBuilderTest.cls
+++ b/src/classes/ArtistBuilderTest.cls
@@ -13,7 +13,7 @@ private class ArtistBuilderTest {
             .create()
             .build();
         
-        System.assertNotEquals(null, artist, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
+        System.assertNotEquals(null, artist, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
 
     @isTest
@@ -22,7 +22,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        System.assertNotEquals(null, artist, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
+        System.assertNotEquals(null, artist, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Artist__c' }));
     }
     
     @isTest
@@ -31,10 +31,10 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        artist.Name = MBMS_Constants.MBMS_TEST_STRING_VALUE;
+        artist.Name = Constants.TEST_STRING_VALUE;
         update artist;
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.Name, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_STRING_VALUE, artist.Name, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -43,7 +43,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_First_Name__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_First_Name__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_First_Name__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_First_Name__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -52,7 +52,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Last_Name__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Last_Name__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_Last_Name__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Last_Name__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -61,7 +61,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
 
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Birthplace__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Birthplace__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_Birthplace__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Birthplace__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -69,7 +69,7 @@ private class ArtistBuilderTest {
         MBMS_Artist__c artist = [SELECT MBMS_Date_of_Birth__c
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
-        System.assertEquals(MBMS_Constants.MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Birth__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Birth__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_DATE_200_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Birth__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Birth__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -78,7 +78,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
 
-        System.assertEquals(MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Death__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Death__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_DATE_10_DAYS_BEFORE_TODAY, artist.MBMS_Date_of_Death__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Date_of_Death__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -87,7 +87,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        System.assertEquals(MBMS_Constants.MBMS_TEST_STRING_VALUE, artist.MBMS_Description__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Description__c', MBMS_Constants.MBMS_TEST_STRING_VALUE }));
+        System.assertEquals(Constants.TEST_STRING_VALUE, artist.MBMS_Description__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Description__c', Constants.TEST_STRING_VALUE }));
     }
     
     @isTest
@@ -96,10 +96,10 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        List<String> roles = artist.MBMS_Roles__c.split(MBMS_Constants.MBMS_SEMICOLON);
+        List<String> roles = artist.MBMS_Roles__c.split(';');
         
-        System.assert(roles.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'Roles', '0' }));
-        System.assertEquals(MBMS_Constants.MBMS_ROLE_AUTHOR, roles.get(0), String.format(MBMS_Constants.FIELD_SHOULD_CONTAIN_PATTERN, new List<String> { 'MBMS_Roles__c', MBMS_Constants.MBMS_ROLE_AUTHOR }));
+        System.assert(roles.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'Roles', '0' }));
+        System.assertEquals(Constants.ROLE_AUTHOR, roles.get(0), String.format(Constants.FIELD_SHOULD_CONTAIN_PATTERN, new List<String> { 'MBMS_Roles__c', Constants.ROLE_AUTHOR }));
     }
 
     @isTest
@@ -108,7 +108,7 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        System.assertEquals(MBMS_Constants.MBMS_STATUS_APPROVED, artist.MBMS_Status__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status__c', MBMS_Constants.MBMS_STATUS_APPROVED }));
+        System.assertEquals(Constants.STATUS_APPROVED, artist.MBMS_Status__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status__c', Constants.STATUS_APPROVED }));
     }
     
     @isTest
@@ -117,6 +117,6 @@ private class ArtistBuilderTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
         
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
+        System.assertEquals(Constants.INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', Constants.INITIAL_STATUS_COMMENT }));
     }
 }
