--- a/src/classes/ArtistTriggerHandlerTest.cls
+++ b/src/classes/ArtistTriggerHandlerTest.cls
@@ -17,7 +17,7 @@ private class ArtistTriggerHandlerTest {
         
         String expectedName = String.format('{0} {1}', new List<String> { artist.MBMS_First_Name__c, artist.MBMS_Last_Name__c });
         
-        System.assertEquals(expectedName, artist.Name, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> {'Name', expectedName }));
+        System.assertEquals(expectedName, artist.Name, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> {'Name', expectedName }));
     }
     
     @isTest
@@ -26,7 +26,7 @@ private class ArtistTriggerHandlerTest {
         MBMS_Movie__c movie = new MovieBuilder().create().buildAndInsert();
         MBMS_Movie_Actor__c movieActor = new MovieActorBuilder()
             .create()
-            .withCharacterName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
+            .withCharacterName(Constants.TEST_STRING_VALUE)
             .withMovie(movie)
             .withActor(artist)
             .buildAndInsert();
@@ -37,7 +37,7 @@ private class ArtistTriggerHandlerTest {
         
         List<MBMS_Movie_Actor__c> movieActors = [SELECT Id FROM MBMS_Movie_Actor__c LIMIT 1];
         
-        System.assertEquals(0, movieActors.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'movieActors', '0' }));
+        System.assertEquals(0, movieActors.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'movieActors', '0' }));
     }
     
     @isTest
@@ -46,7 +46,7 @@ private class ArtistTriggerHandlerTest {
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
                 
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c' }));
+        System.assertEquals(Constants.INITIAL_STATUS_COMMENT, artist.MBMS_Status_Comment__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c' }));
     }
 
     @isTest
@@ -54,21 +54,21 @@ private class ArtistTriggerHandlerTest {
         MBMS_Artist__c artist = [SELECT OwnerId
                                  FROM MBMS_Artist__c
                                  LIMIT 1];
-        artist.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        artist.MBMS_Status__c = Constants.STATUS_REJECTED;
 
         Test.startTest();
         update artist;
         Test.stopTest();
 
         Group approversQueue = [SELECT Id
-                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
-                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                FROM Group WHERE Type = :Constants.QUEUE_GROUP_TYPE
+                                AND Name = :Constants.APPROVERS_QUEUE
                                 LIMIT 1];
 
         artist = [SELECT OwnerId
                   FROM MBMS_Artist__c
                   LIMIT 1];
         
-        System.assertEquals(approversQueue.Id, artist.OwnerId, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
+        System.assertEquals(approversQueue.Id, artist.OwnerId, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
     }
 }
