--- a/src/classes/ArtistTriggerUtility.cls
+++ b/src/classes/ArtistTriggerUtility.cls
@@ -7,7 +7,7 @@ public class ArtistTriggerUtility {
     
     public static void updateArtistStatusComments(List<MBMS_Artist__c> artists) {
         for (MBMS_Artist__c artist : artists) {
-            artist.MBMS_Status_Comment__c = MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT;
+            artist.MBMS_Status_Comment__c = Constants.INITIAL_STATUS_COMMENT;
         }
     }
     
@@ -20,8 +20,8 @@ public class ArtistTriggerUtility {
     
     public static void notifyApprovers(List<MBMS_Artist__c> artists) {
         Group approversQueue = [SELECT Id
-                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
-                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                FROM Group WHERE Type = :Constants.QUEUE_GROUP_TYPE
+                                AND Name = :Constants.APPROVERS_QUEUE
                                 LIMIT 1];
         
         List<GroupMember> approvers = [SELECT UserOrGroupId
@@ -35,15 +35,15 @@ public class ArtistTriggerUtility {
         }
         
         for (MBMS_Artist__c artist : artists) {
-            if (artist.MBMS_Status__c == MBMS_Constants.MBMS_STATUS_APPROVED) {
+            if (artist.MBMS_Status__c == Constants.STATUS_APPROVED) {
                 continue;
             }
             
             artist.OwnerId = approversQueue.Id;
 
             new CustomNotificationBuilder().create()
-                .withTitle(MBMS_Constants.PLEASE_TAKE_ACTION)
-                .withBody(String.format(MBMS_Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { artist.Name, artist.Id }))
+                .withTitle(Constants.PLEASE_TAKE_ACTION)
+                .withBody(String.format(Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { artist.Name, artist.Id }))
                 .withDefaultNotificationType()
                 .withTargetId(artist.Id)
                 .build()
