--- a/src/classes/ArtistsRemovalBatchTest.cls
+++ b/src/classes/ArtistsRemovalBatchTest.cls
@@ -14,8 +14,8 @@ private class ArtistsRemovalBatchTest {
         List<MBMS_Artist__c> artists = [SELECT Id FROM MBMS_Artist__c];
         
         for (MBMS_Artist__c artist : artists) {
-            Test.setCreatedDate(artist.Id, MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY);
-            artist.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+            Test.setCreatedDate(artist.Id, Constants.TEST_DATE_10_DAYS_BEFORE_TODAY);
+            artist.MBMS_Status__c = Constants.STATUS_REJECTED;
         }
         
         update artists;
@@ -25,7 +25,7 @@ private class ArtistsRemovalBatchTest {
         Test.stopTest();
         
         artists = [SELECT Id FROM MBMS_Artist__c];
-        System.assertEquals(0, artists.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'artists', '0' }));
+        System.assertEquals(0, artists.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'artists', '0' }));
     }
     
     @isTest
@@ -38,17 +38,17 @@ private class ArtistsRemovalBatchTest {
         for (Integer i = 0; i < 200; i++) {
             artists.add(builder
                         .create()
-                        .withFirstName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-                        .withLastName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
-                        .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
-                        .withStatus(MBMS_Constants.MBMS_STATUS_REJECTED)
+                        .withFirstName(Constants.TEST_STRING_VALUE)
+                        .withLastName(Constants.TEST_STRING_VALUE)
+                        .withRoles(new List<String> { Constants.ROLE_AUTHOR, Constants.ROLE_ACTOR })
+                        .withStatus(Constants.STATUS_REJECTED)
                         .build());
         }
         
         insert artists;
         
         for (MBMS_Artist__c artist : artists) {
-            Test.setCreatedDate(artist.Id, MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY);
+            Test.setCreatedDate(artist.Id, Constants.TEST_DATE_10_DAYS_BEFORE_TODAY);
         }
         
         Test.startTest();
@@ -57,7 +57,7 @@ private class ArtistsRemovalBatchTest {
         
         artists = [SELECT Id FROM MBMS_Artist__c];
         
-        System.assertEquals(0, artists.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'artists', '0' }));
+        System.assertEquals(0, artists.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'artists', '0' }));
     }
     
     @isTest
@@ -69,7 +69,7 @@ private class ArtistsRemovalBatchTest {
         Test.stopTest();
         
         artists = [SELECT Id FROM MBMS_Artist__c];
-        System.assertEquals(1, artists.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'artists', '1' }));
+        System.assertEquals(1, artists.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'artists', '1' }));
     }
     
     private static void removeExistingArtists() {
