--- a/src/classes/BatchLogsRemovalBatch.cls
+++ b/src/classes/BatchLogsRemovalBatch.cls
@@ -6,10 +6,10 @@ public class BatchLogsRemovalBatch extends VirtualBatchRunLogger implements Data
     
     public Database.QueryLocator start(Database.BatchableContext context) {
         super.startLogging();
-        System.debug('size: ' + [SELECT Id FROM MBMS_Batch_Log__c WHERE CreatedDate <= :MBMS_Constants.MBMS_RECORDS_RETENTION_DATE].size());
+        System.debug('size: ' + [SELECT Id FROM MBMS_Batch_Log__c WHERE CreatedDate <= :Constants.RECORDS_RETENTION_DATE].size());
         return Database.getQueryLocator([SELECT Id
                                          FROM MBMS_Batch_Log__c
-                                         WHERE CreatedDate <= :MBMS_Constants.MBMS_RECORDS_RETENTION_DATE]);
+                                         WHERE CreatedDate <= :Constants.RECORDS_RETENTION_DATE]);
     }
     
     public void execute(Database.BatchableContext context, List<MBMS_Batch_Log__c> batchLogs) {
