--- a/src/classes/BatchLogsRemovalBatchTest.cls
+++ b/src/classes/BatchLogsRemovalBatchTest.cls
@@ -14,7 +14,7 @@ private class BatchLogsRemovalBatchTest {
         List<MBMS_Batch_Log__c> batchLogs = [SELECT Id FROM MBMS_Batch_Log__c];
         
         for (MBMS_Batch_Log__c batchLog : batchLogs) {
-            Test.setCreatedDate(batchLog.Id, MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY);
+            Test.setCreatedDate(batchLog.Id, Constants.TEST_DATE_10_DAYS_BEFORE_TODAY);
         }
         
         Test.startTest();
@@ -22,7 +22,7 @@ private class BatchLogsRemovalBatchTest {
         Test.stopTest();
         
         batchLogs = [SELECT Id FROM MBMS_Batch_Log__c WHERE CreatedDate != TODAY];
-        System.assertEquals(0, batchLogs.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'batchLogs', '0' }));
+        System.assertEquals(0, batchLogs.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'batchLogs', '0' }));
     }
     
     @isTest
@@ -41,7 +41,7 @@ private class BatchLogsRemovalBatchTest {
         insert batchLogs;
         
         for (MBMS_Batch_Log__c batchLog : batchLogs) {
-            Test.setCreatedDate(batchLog.Id, MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY);
+            Test.setCreatedDate(batchLog.Id, Constants.TEST_DATE_10_DAYS_BEFORE_TODAY);
         }
         
         Test.startTest();
@@ -50,7 +50,7 @@ private class BatchLogsRemovalBatchTest {
         
         batchLogs = [SELECT Id FROM MBMS_Batch_Log__c WHERE CreatedDate != TODAY];
         
-        System.assertEquals(0, batchLogs.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'batchLogs', '0' }));
+        System.assertEquals(0, batchLogs.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'batchLogs', '0' }));
     }
     
     @isTest
@@ -62,7 +62,7 @@ private class BatchLogsRemovalBatchTest {
         Test.stopTest();
         
         batchLogs = [SELECT Id FROM MBMS_Batch_Log__c];
-        System.assert(batchLogs.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'batchLogs', '0' }));
+        System.assert(batchLogs.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'batchLogs', '0' }));
     }
     
     private static void removeExistingBatchLogs() {
