--- a/src/classes/BooksListController.cls
+++ b/src/classes/BooksListController.cls
@@ -8,7 +8,7 @@ public with sharing class BooksListController {
     public static List<MBMS_Book__c> getRequiringActionBooks() {
         return [SELECT Id, Name, MBMS_Status__c, CreatedDate
                 FROM MBMS_Book__c
-                WHERE MBMS_Status__c IN (:MBMS_Constants.MBMS_STATUS_INITIAL, :MBMS_Constants.MBMS_STATUS_REJECTED)
+                WHERE MBMS_Status__c IN (:Constants.STATUS_INITIAL, :Constants.STATUS_REJECTED)
                 ORDER BY CreatedDate];
     }
     
