--- a/src/classes/MoviesRemovalBatch.cls
+++ b/src/classes/MoviesRemovalBatch.cls
@@ -7,9 +7,9 @@ public class MoviesRemovalBatch extends VirtualBatchRunLogger implements Databas
         startLogging();
         return Database.getQueryLocator([SELECT Id
                                          FROM MBMS_Movie__c
-                                         WHERE MBMS_Status__c IN (:MBMS_Constants.MBMS_STATUS_INITIAL,
-                                                                  :MBMS_Constants.MBMS_STATUS_REJECTED)
-                                         AND CreatedDate <= :MBMS_Constants.MBMS_RECORDS_RETENTION_DATE]);
+                                         WHERE MBMS_Status__c IN (:Constants.STATUS_INITIAL,
+                                                                  :Constants.STATUS_REJECTED)
+                                         AND CreatedDate <= :Constants.RECORDS_RETENTION_DATE]);
     }
     
     public void execute(Database.BatchableContext context, List<MBMS_Movie__c> movies) {
