--- a/src/classes/RequiringActionRecordsController.cls
+++ b/src/classes/RequiringActionRecordsController.cls
@@ -29,7 +29,7 @@ public with sharing class RequiringActionRecordsController {
         List<Group> queues = [SELECT Name FROM Group WHERE Id IN :userGroupsIds];
         
         for (Group queue : queues) {
-            if (queue.Name == MBMS_Constants.APPROVERS_QUEUE) {
+            if (queue.Name == Constants.APPROVERS_QUEUE) {
                 return true;
             }
         }
