--- a/src/classes/ArtistsRemovalBatch.cls
+++ b/src/classes/ArtistsRemovalBatch.cls
@@ -8,9 +8,9 @@ public class ArtistsRemovalBatch extends VirtualBatchRunLogger implements Databa
         super.startLogging();
         return Database.getQueryLocator([SELECT Id
                                          FROM MBMS_Artist__c
-                                         WHERE MBMS_Status__c IN (:MBMS_Constants.MBMS_STATUS_INITIAL,
-                                                                  :MBMS_Constants.MBMS_STATUS_REJECTED)
-                                         AND CreatedDate <= :MBMS_Constants.MBMS_RECORDS_RETENTION_DATE]);
+                                         WHERE MBMS_Status__c IN (:Constants.STATUS_INITIAL,
+                                                                  :Constants.STATUS_REJECTED)
+                                         AND CreatedDate <= :Constants.RECORDS_RETENTION_DATE]);
     }
     
     public void execute(Database.BatchableContext context, List<MBMS_Artist__c> artists) {
