--- a/src/classes/BookNewsControllerTest.cls
+++ b/src/classes/BookNewsControllerTest.cls
@@ -21,12 +21,12 @@ public class BookNewsControllerTest {
             bookNews = BookNewsController.getLatestBookNews();
         } catch (Exception e) {
             exceptionsCount++;
-            System.assertNotEquals(null, e, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'Exception' }));
-            System.assertEquals('List has no rows for assignment to SObject', e.getMessage(), MBMS_Constants.NO_ROWS_FOR_ASSIGMENT);
+            System.assertNotEquals(null, e, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'Exception' }));
+            System.assertEquals('List has no rows for assignment to SObject', e.getMessage(), Constants.NO_ROWS_FOR_ASSIGMENT);
         }
         Test.stopTest();
         
-        System.assert(exceptionsCount > 0, String.format(MBMS_Constants.VALUE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'exceptionsCount', '0' }));
+        System.assert(exceptionsCount > 0, String.format(Constants.VALUE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'exceptionsCount', '0' }));
     }
     
     @isTest
@@ -35,7 +35,7 @@ public class BookNewsControllerTest {
         MBMS_Book_News__c bookNews = BookNewsController.getLatestBookNews();
         Test.stopTest();
         
-        System.assertNotEquals(null, bookNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book_News__c' }));
+        System.assertNotEquals(null, bookNews, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book_News__c' }));
     }
     
     @isTest
@@ -46,6 +46,6 @@ public class BookNewsControllerTest {
         MBMS_Book_News__c bookNews = BookNewsController.getLatestBookNewsByBookId(book.Id);
         Test.stopTest();
         
-        System.assertNotEquals(null, bookNews, String.format(MBMS_Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book_News__c' }));
+        System.assertNotEquals(null, bookNews, String.format(Constants.OBJECT_SHOULD_NOT_BE_NULL_PATTERN, new List<String> { 'MBMS_Book_News__c' }));
     }
 }
