--- a/src/classes/BookTriggerUtility.cls
+++ b/src/classes/BookTriggerUtility.cls
@@ -7,14 +7,14 @@ public class BookTriggerUtility {
     
     public static void updateBookStatusComments(List<MBMS_Book__c> books) {
         for (MBMS_Book__c book : books) {
-            book.MBMS_Status_Comment__c = MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT;
+            book.MBMS_Status_Comment__c = Constants.INITIAL_STATUS_COMMENT;
         }
     }
 
     public static void notifyApprovers(List<MBMS_Book__c> books) {
         Group approversQueue = [SELECT Id
-                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
-                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                FROM Group WHERE Type = :Constants.QUEUE_GROUP_TYPE
+                                AND Name = :Constants.APPROVERS_QUEUE
                                 LIMIT 1];
         
         List<GroupMember> approvers = [SELECT UserOrGroupId
@@ -28,15 +28,15 @@ public class BookTriggerUtility {
         }
         
         for (MBMS_Book__c book : books) {
-            if (book.MBMS_Status__c == MBMS_Constants.MBMS_STATUS_APPROVED) {
+            if (book.MBMS_Status__c == Constants.STATUS_APPROVED) {
                 continue;
             }
             
             book.OwnerId = approversQueue.Id;
 
             new CustomNotificationBuilder().create()
-                .withTitle(MBMS_Constants.PLEASE_TAKE_ACTION)
-                .withBody(String.format(MBMS_Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { book.Name, book.Id }))
+                .withTitle(Constants.PLEASE_TAKE_ACTION)
+                .withBody(String.format(Constants.RECORD_TO_APPROVE_PATTERN, new List<String> { book.Name, book.Id }))
                 .withDefaultNotificationType()
                 .withTargetId(book.Id)
                 .build()
