--- a/src/classes/BooksListControllerTest.cls
+++ b/src/classes/BooksListControllerTest.cls
@@ -18,7 +18,7 @@ private class BooksListControllerTest {
         List<MBMS_Book__c> booksList = BooksListController.getBooksList();
         Test.stopTest();
         
-        System.assertEquals(0, booksList.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'booksList', '0' }));
+        System.assertEquals(0, booksList.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'booksList', '0' }));
     }
     
     @isTest
@@ -27,21 +27,21 @@ private class BooksListControllerTest {
         List<MBMS_Book__c> booksList = BooksListController.getBooksList();
         Test.stopTest();
         
-        System.assert(booksList.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'bookList', '0' }));
-        System.assertNotEquals(null, booksList[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'booksList' }));
+        System.assert(booksList.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'bookList', '0' }));
+        System.assertNotEquals(null, booksList[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'booksList' }));
     }
     
     @isTest
     static void shouldReturnEmptyListOfRequiringActionBooks() {
         MBMS_Book__c book = [SELECT Id FROM MBMS_Book__c LIMIT 1];
-        book.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_APPROVED;
+        book.MBMS_Status__c = Constants.STATUS_APPROVED;
         update book;
         
         Test.startTest();
         List<MBMS_Book__c> booksList = BooksListController.getRequiringActionBooks();
         Test.stopTest();
         
-        System.assertEquals(0, booksList.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'booksList', '0' }));
+        System.assertEquals(0, booksList.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'booksList', '0' }));
     }
     
     @isTest
@@ -49,7 +49,7 @@ private class BooksListControllerTest {
         List<MBMS_Book__c> booksFromDb = [SELECT Id FROM MBMS_Book__c];
         
         for (MBMS_Book__c book : booksFromDb) {
-            book.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+            book.MBMS_Status__c = Constants.STATUS_REJECTED;
         }
         
         update booksFromDb;
@@ -58,8 +58,8 @@ private class BooksListControllerTest {
         List<MBMS_Book__c> booksList = BooksListController.getRequiringActionBooks();
         Test.stopTest();
         
-        System.assert(booksList.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'booksList', '0' }));
-        System.assertNotEquals(null, booksList[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'booksList' }));
+        System.assert(booksList.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'booksList', '0' }));
+        System.assertNotEquals(null, booksList[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'booksList' }));
     }
     
     @isTest
@@ -71,7 +71,7 @@ private class BooksListControllerTest {
         Boolean areBooksAvailable = BooksListController.areBooksAvailable();
         Test.stopTest();
         
-        System.assert(!areBooksAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areBooksAvailable' }));
+        System.assert(!areBooksAvailable, String.format(Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areBooksAvailable' }));
     }
     
     @isTest
@@ -80,6 +80,6 @@ private class BooksListControllerTest {
         Boolean areBooksAvailable = BooksListController.areBooksAvailable();
         Test.stopTest();
         
-        System.assert(areBooksAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areBooksAvailable' }));
+        System.assert(areBooksAvailable, String.format(Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areBooksAvailable' }));
     }
 }
