--- a/src/classes/MovieActorsListControllerTest.cls
+++ b/src/classes/MovieActorsListControllerTest.cls
@@ -18,7 +18,7 @@ private class MovieActorsListControllerTest {
         List<MBMS_Movie_Actor__c> movieActors = MovieActorsListController.getMovieActors();
         Test.stopTest();
         
-        System.assertEquals(0, movieActors.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'movieActors', '0' }));
+        System.assertEquals(0, movieActors.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'movieActors', '0' }));
     }
     
     @isTest
@@ -27,8 +27,8 @@ private class MovieActorsListControllerTest {
         List<MBMS_Movie_Actor__c> movieActors = MovieActorsListController.getMovieActors();
         Test.stopTest();
         
-        System.assert(movieActors.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'movieActors', '0' }));
-        System.assertNotEquals(null, movieActors[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'movieActors' }));
+        System.assert(movieActors.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'movieActors', '0' }));
+        System.assertNotEquals(null, movieActors[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'movieActors' }));
     }
     
     @isTest
@@ -40,7 +40,7 @@ private class MovieActorsListControllerTest {
         Boolean areMovieActorsAvailable = MovieActorsListController.areMovieActorsAvailable();
         Test.stopTest();
         
-        System.assert(!areMovieActorsAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areMovieActorsAvailable' }));
+        System.assert(!areMovieActorsAvailable, String.format(Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areMovieActorsAvailable' }));
     }
     
     @isTest
@@ -49,6 +49,6 @@ private class MovieActorsListControllerTest {
         Boolean areMovieActorsAvailable = MovieActorsListController.areMovieActorsAvailable();
         Test.stopTest();
         
-        System.assert(areMovieActorsAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areMovieActorsAvailable' }));
+        System.assert(areMovieActorsAvailable, String.format(Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areMovieActorsAvailable' }));
     }
 }
