--- a/src/classes/MoviePhotoTriggerHandlerTest.cls
+++ b/src/classes/MoviePhotoTriggerHandlerTest.cls
@@ -15,7 +15,7 @@ private class MoviePhotoTriggerHandlerTest {
                                           FROM MBMS_Movie_Photo__c
                                           LIMIT 1];
         
-        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, moviePhoto.MBMS_Status_Comment__c, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT }));
+        System.assertEquals(Constants.INITIAL_STATUS_COMMENT, moviePhoto.MBMS_Status_Comment__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Status_Comment__c', Constants.INITIAL_STATUS_COMMENT }));
     }
 
     @isTest
@@ -23,21 +23,21 @@ private class MoviePhotoTriggerHandlerTest {
         MBMS_Movie_Photo__c moviePhoto = [SELECT OwnerId
                                           FROM MBMS_Movie_Photo__c
                                           LIMIT 1];  
-        moviePhoto.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        moviePhoto.MBMS_Status__c = Constants.STATUS_REJECTED;
 
         Test.startTest();
         update moviePhoto;
         Test.stopTest();
 
         Group approversQueue = [SELECT Id
-                                FROM Group WHERE Type = :MBMS_Constants.QUEUE_GROUP_TYPE
-                                AND Name = :MBMS_Constants.APPROVERS_QUEUE
+                                FROM Group WHERE Type = :Constants.QUEUE_GROUP_TYPE
+                                AND Name = :Constants.APPROVERS_QUEUE
                                 LIMIT 1];
 
         moviePhoto = [SELECT OwnerId
                       FROM MBMS_Movie_Photo__c
                       LIMIT 1];
         
-        System.assertEquals(approversQueue.Id, moviePhoto.OwnerId, String.format(MBMS_Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
+        System.assertEquals(approversQueue.Id, moviePhoto.OwnerId, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
     }
 }
