--- a/src/classes/MoviePhotosListController.cls
+++ b/src/classes/MoviePhotosListController.cls
@@ -18,7 +18,7 @@ public with sharing class MoviePhotosListController {
     public static List<MBMS_Movie_Photo__c> getRequiringActionPhotos() {
         return [SELECT Id, Name, MBMS_Status__c, CreatedDate
                 FROM MBMS_Movie_Photo__c
-                WHERE MBMS_Status__c IN (:MBMS_Constants.MBMS_STATUS_INITIAL, :MBMS_Constants.MBMS_STATUS_REJECTED)
+                WHERE MBMS_Status__c IN (:Constants.STATUS_INITIAL, :Constants.STATUS_REJECTED)
                 ORDER BY CreatedDate];
     }
     
