--- a/src/classes/MoviePhotosListControllerTest.cls
+++ b/src/classes/MoviePhotosListControllerTest.cls
@@ -18,7 +18,7 @@ private class MoviePhotosListControllerTest {
         List<MBMS_Movie_Photo__c> moviePhotos = MoviePhotosListController.getPhotos();
         Test.stopTest();
         
-        System.assertEquals(0, moviePhotos.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviePhotos', '0' }));
+        System.assertEquals(0, moviePhotos.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviePhotos', '0' }));
     }
     
     @isTest
@@ -27,8 +27,8 @@ private class MoviePhotosListControllerTest {
         List<MBMS_Movie_Photo__c> moviePhotos = MoviePhotosListController.getPhotos();
         Test.stopTest();
         
-        System.assert(moviePhotos.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviePhotos', '0' }));
-        System.assertNotEquals(null, moviePhotos[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviePhotos' }));
+        System.assert(moviePhotos.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviePhotos', '0' }));
+        System.assertNotEquals(null, moviePhotos[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviePhotos' }));
     }
     
     @isTest
@@ -40,7 +40,7 @@ private class MoviePhotosListControllerTest {
         List<MBMS_Movie_Photo__c> moviePhotos = MoviePhotosListController.getLatestPhotos();
         Test.stopTest();
         
-        System.assertEquals(0, moviePhotos.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviePhotos', '0' }));
+        System.assertEquals(0, moviePhotos.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviePhotos', '0' }));
     }
     
     @isTest
@@ -49,8 +49,8 @@ private class MoviePhotosListControllerTest {
         List<MBMS_Movie_Photo__c> moviePhotos = MoviePhotosListController.getLatestPhotos();
         Test.stopTest();
         
-        System.assert(moviePhotos.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviePhotos', '0' }));
-        System.assertNotEquals(null, moviePhotos[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviePhotos' }));
+        System.assert(moviePhotos.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviePhotos', '0' }));
+        System.assertNotEquals(null, moviePhotos[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviePhotos' }));
     }
     
     @isTest
@@ -59,7 +59,7 @@ private class MoviePhotosListControllerTest {
         Boolean photosAvailable = MoviePhotosListController.arePhotosAvailable();
         Test.stopTest();
         
-        System.assert(!photosAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'photosAvailable' }));
+        System.assert(!photosAvailable, String.format(Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'photosAvailable' }));
     }
     
     @isTest
@@ -80,7 +80,7 @@ private class MoviePhotosListControllerTest {
         Boolean photosAvailable = MoviePhotosListController.arePhotosAvailable();
         Test.stopTest();
         
-        System.assert(photosAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'photosAvailable' }));
+        System.assert(photosAvailable, String.format(Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'photosAvailable' }));
     }
     
     @isTest
@@ -89,7 +89,7 @@ private class MoviePhotosListControllerTest {
         Integer minimumNumberOfPhotos = MoviePhotosListController.getMinimumNumberOfPhotos();
         Test.stopTest();
         
-        System.assertEquals(MoviePhotosListController.MINIMUM_NUMBER_OF_PHOTOS, minimumNumberOfPhotos, String.format(MBMS_Constants.VALUE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { String.valueOf(minimumNumberOfPhotos) }));
+        System.assertEquals(MoviePhotosListController.MINIMUM_NUMBER_OF_PHOTOS, minimumNumberOfPhotos, String.format(Constants.VALUE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { String.valueOf(minimumNumberOfPhotos) }));
     }
     
     @isTest
@@ -98,7 +98,7 @@ private class MoviePhotosListControllerTest {
         List<MBMS_Movie_Photo__c> moviePhotos = MoviePhotosListController.getRequiringActionPhotos();
         Test.stopTest();
         
-        System.assertEquals(0, moviePhotos.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviePhotos', '0' }));
+        System.assertEquals(0, moviePhotos.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviePhotos', '0' }));
     }
     
     @isTest
@@ -106,7 +106,7 @@ private class MoviePhotosListControllerTest {
 		List<MBMS_Movie_Photo__c> moviePhotosFromDb = [SELECT Id FROM MBMS_Movie_Photo__c];
         
         for (MBMS_Movie_Photo__c moviePhoto : moviePhotosFromDb) {
-            moviePhoto.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+            moviePhoto.MBMS_Status__c = Constants.STATUS_REJECTED;
         }
         
         update moviePhotosFromDb;
@@ -115,7 +115,7 @@ private class MoviePhotosListControllerTest {
         List<MBMS_Movie_Photo__c> moviePhotos = MoviePhotosListController.getRequiringActionPhotos();
         Test.stopTest();
         
-        System.assert(moviePhotos.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviePhotos', '0' }));
-        System.assertNotEquals(null, moviePhotos[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviePhotos' }));
+        System.assert(moviePhotos.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviePhotos', '0' }));
+        System.assertNotEquals(null, moviePhotos[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviePhotos' }));
     }
 }
