--- a/src/classes/MoviesListControllerTest.cls
+++ b/src/classes/MoviesListControllerTest.cls
@@ -18,7 +18,7 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getMoviesList();
         Test.stopTest();
         
-        System.assertEquals(0, moviesList.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviesList', '0' }));
+        System.assertEquals(0, moviesList.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviesList', '0' }));
     }
     
     @isTest
@@ -27,21 +27,21 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getMoviesList();
         Test.stopTest();
         
-        System.assert(moviesList.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviesList', '0' }));
-        System.assertNotEquals(null, moviesList[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviesList' }));
+        System.assert(moviesList.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviesList', '0' }));
+        System.assertNotEquals(null, moviesList[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviesList' }));
     }
     
     @isTest
     static void shouldReturnEmptyListOfRequiringActionMovies() {
         MBMS_Movie__c movie = [SELECT Id FROM MBMS_Movie__c LIMIT 1];
-        movie.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_APPROVED;
+        movie.MBMS_Status__c = Constants.STATUS_APPROVED;
         update movie;
         
         Test.startTest();
         List<MBMS_Movie__c> moviesList = MoviesListController.getRequiringActionMovies();
         Test.stopTest();
         
-        System.assertEquals(0, moviesList.size(), String.format(MBMS_Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviesList', '0' }));
+        System.assertEquals(0, moviesList.size(), String.format(Constants.SIZE_SHOULD_BE_EQUAL_TO_PATTERN, new List<String> { 'moviesList', '0' }));
     }
     
     @isTest
@@ -49,7 +49,7 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesFromDb = [SELECT Id FROM MBMS_Movie__c];
         
         for (MBMS_Movie__c movie : moviesFromDb) {
-            movie.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+            movie.MBMS_Status__c = Constants.STATUS_REJECTED;
         }
         
         update moviesFromDb;
@@ -58,8 +58,8 @@ private class MoviesListControllerTest {
         List<MBMS_Movie__c> moviesList = MoviesListController.getRequiringActionMovies();
         Test.stopTest();
         
-        System.assert(moviesList.size() > 0, String.format(MBMS_Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviesList', '0' }));
-        System.assertNotEquals(null, moviesList[0], String.format(MBMS_Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviesList' }));
+        System.assert(moviesList.size() > 0, String.format(Constants.SIZE_SHOULD_BE_GREATER_THAN_PATTERN, new List<String> { 'moviesList', '0' }));
+        System.assertNotEquals(null, moviesList[0], String.format(Constants.ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL, new List<String> { 'moviesList' }));
     }
     
     @isTest
@@ -71,7 +71,7 @@ private class MoviesListControllerTest {
         Boolean areMoviesAvailable = MoviesListController.areMoviesAvailable();
         Test.stopTest();
         
-        System.assert(!areMoviesAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areMoviesAvailable' }));
+        System.assert(!areMoviesAvailable, String.format(Constants.VALUE_SHOULD_BE_FALSE, new List<String> { 'areMoviesAvailable' }));
     }
     
     @isTest
@@ -80,6 +80,6 @@ private class MoviesListControllerTest {
         Boolean areMoviesAvailable = MoviesListController.areMoviesAvailable();
         Test.stopTest();
         
-        System.assert(areMoviesAvailable, String.format(MBMS_Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areMoviesAvailable' }));
+        System.assert(areMoviesAvailable, String.format(Constants.VALUE_SHOULD_BE_TRUE, new List<String> { 'areMoviesAvailable' }));
     }
 }
